# pitchfork

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  conanfile.txt  pmm.cmake
cmake/: CMakeRC.cmake  FindBikeshed.cmake  FindConan.cmake  FindFilesystem.cmake  FindYarn.cmake  Pitchfork.cmake  PitchforkAuto.cmake
data/: CMakeLists.txt  spec.bs
data/templates/: CMakeLists.txt
data/templates/base/: first_example.in.cpp  first_header.in.hpp  first_source.in.cpp  first_test.in.cpp
data/templates/cmake/: examples_cml.in.cmake  root_cml.in.cmake  src_cml.in.cmake
examples/: CMakeLists.txt  example1.cpp
extras/: CMakeLists.txt  __init__.py
extras/pf-cmake/: auto.cmake  entry.cmake
extras/pf_conan/: __init__.py  conanfile.py
extras/pf_conan/pf_conan/: __init__.py  cmake.py
extras/pf_conan/test_package/: CMakeLists.txt  conanfile.py
extras/pf_conan/test_package/src/: program.cpp
extras/vscode-pitchfork/: CHANGELOG.md  README.md  package.json  tsconfig.json
extras/vscode-pitchfork/src/: cmake.ts  dirs.ts  extension.ts  new.ts  pr.ts  settings.ts
src/: CMakeLists.txt  pf.cpp
src/pf/: existing.cpp  existing.hpp  file_template.cpp  file_template.hpp  fs.cpp  fs.hpp  new.cpp  new.hpp  pitchfork.cpp  pitchfork.hpp
src/pf/existing/: detect_base_dir.cpp  detect_base_dir.hpp  detect_project_root.cpp  detect_project_root.hpp  glob_sources.cpp  glob_sources.hpp  update_source_files.cpp  update_source_files.hpp
src/pf/fs/: ascending_iterator.cpp  ascending_iterator.hpp  ascending_paths.cpp  ascending_paths.hpp  ascending_range.cpp  ascending_range.hpp  core.cpp  core.hpp  glob.cpp  glob.hpp
src/pf/new/: cmake.cpp  cmake.hpp  dirs.cpp  dirs.hpp  files.cpp  files.hpp  params.hpp  project.cpp  project.hpp
tests/: CMakeLists.txt  compare_fs.cpp  compare_fs.hpp  generate.cpp  my_test.cpp
tests/existing/: detect_base_dir.cpp  detect_project_root.cpp  glob_sources.cpp  update_source_files.cpp
tests/existing/sample/parallel_build/: CMakeCache.txt.in
tests/existing/sample/project/: CMakeLists.txt
tests/existing/sample/project/src/: CMakeLists.txt  CMakeLists.txt.after_grouped_update  CMakeLists.txt.after_update
tests/expected/simple-cmake/: CMakeLists.txt
tests/expected/simple-cmake/examples/: CMakeLists.txt  example1.cpp
tests/expected/simple-cmake/src/: CMakeLists.txt
tests/expected/simple-cmake/src/simple/: simple-cmake.cpp  simple-cmake.hpp
tests/expected/simple-cmake/tests/: my_test.cpp
tests/expected/simple/examples/: example1.cpp
tests/expected/simple/src/simple/: simple.cpp  simple.hpp
tests/expected/simple/tests/: my_test.cpp
tests/fs/: ascending_paths.cpp
